--- a/app/src/main/res/layout/add_edit_note_screen_fragment.xml
+++ b/app/src/main/res/layout/add_edit_note_screen_fragment.xml
@@ -2,28 +2,50 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context=".presentation.add_edit_note_screen.AddEditNoteScreenFragment"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/titleEditText"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="@android:color/transparent"
-        android:hint="Заголовок"
-        android:textSize="24sp"
-        tools:ignore="TouchTargetSizeCheck" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/contentEditText"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/add_edit_note_menu"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:background="@android:color/transparent"
-        android:hint="Заметка"
-        tools:ignore="TouchTargetSizeCheck" />
+        android:padding="8dp"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <EditText
+            android:id="@+id/titleEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@android:color/transparent"
+            android:hint="Заголовок"
+            android:textSize="24sp"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <EditText
+            android:id="@+id/contentEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/transparent"
+            android:hint="Заметка"
+            tools:ignore="TouchTargetSizeCheck" />
+    </LinearLayout>
+
+
 
 </LinearLayout>
