--- a/app/src/main/res/layout/notes_screen_fragment.xml
+++ b/app/src/main/res/layout/notes_screen_fragment.xml
@@ -39,11 +39,13 @@
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/backImageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:visibility="gone"
                     android:background="?actionBarItemBackground"
                     android:src="@drawable/ic_arrow_back"
+                    android:scaleType="center"
+                    android:padding="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:foregroundTint="@color/white"
@@ -64,9 +66,11 @@
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/searchImageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_marginEnd="8dp"
+                    android:scaleType="center"
+                    android:padding="8dp"
                     android:src="@drawable/ic_search"
                     android:background="?actionBarItemBackground"
                     android:foregroundTint="@color/white"
