--- a/app/src/main/res/menu/add_edit_note_menu.xml
+++ b/app/src/main/res/menu/add_edit_note_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/pin"
-        app:iconTint = "@color/white"
+        app:iconTint = "@color/black"
         android:title="pin"
         app:showAsAction="always"/>
     <item
