--- a/app/src/main/res/layout/add_edit_note_screen_fragment.xml
+++ b/app/src/main/res/layout/add_edit_note_screen_fragment.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
-            android:inputType="textCapSentences"
+            android:inputType="textMultiLine"
             android:gravity="top"
             android:background="@android:color/transparent"
             android:hint="Заметка"
